# ja-media-toolkit

./: .dockerignore  .gitignore  AGENTS.md  README.md  asr_mixed_embed_client.py  compose.yaml  main.py  pyproject.toml
.agents/skills/add-service/: SKILL.md
.agents/skills/add-service/agents/: openai.yaml
.agents/skills/add-service/references/: service-pattern.md
.agents/skills/anime-crosswalk/: SKILL.md
.agents/skills/anime-crosswalk/agents/: openai.yaml
.agents/skills/anime-crosswalk/references/: api.md  client.md
.agents/skills/anime-crosswalk/scripts/: download-dump.sh  resolve.sh
deploy/audiobookshelf/: .env.example  .gitignore  README.md  compose.yaml
deploy/ja-media-services/grafana/: ja-media-services.json
deploy/ja-media-services/observability/: prometheus-targets.json.tmpl
deploy/qwen3-forced-aligner-vllm/: .env.example  Dockerfile  README.md  compose.yaml
deploy/qwen3-forced-aligner-vllm/config/: raw_content_chat_template.jinja
deploy/qwen3-forced-aligner-vllm/scripts/: run-docker.sh  smoke-health.sh  smoke-image-audio.sh  start-compose.sh
docs/: ARCHITECTURE.md  eval-workbench-design.md  macos-fork-subprocess.md  monorepo-philosophy.md  roadmap.md  subsync-core-modularization.md  subsync.md  uv-tool-install-frontends.md  vad-library-example.md  vad.md
docs/audio-library/: README.md
docs/plans/: anilist-direct-fallback.md  anilist-metadata-expansion.md  derived-anime-audio-library.md  extraction_guide.md  first-pass-desync-tooling.md  kitsunekko-subtitle-service.md  metadata-crosswalk.md  observability-v1.md  srt-cleaning-batch-design.md  subsync-core-modularization.md  vad-visualization.md
docs/plans/forced-alignment/: README.md  forced-aligner-backend-design.md  qwen3-backend-implementation-notes.md  qwen3-forced-aligner-pool-notes.md  run-artifacts-and-serialization.md  srt-cleaning-batch-design.md
docs/vibevoice/: split-asr-backend-design.md  vllm-batch-asr.md  vllm-embed-interface.md
envs/apple/: README.md  pyproject.toml
envs/apple/src/ja_media_apple/: __init__.py  asr_config.py  asr_vibevoice_vllm.py  audio_chunks.py  cli.py  subsync_tui.py  vad.py  vad_cli.py  vad_predictions.py  vocal_separation.py
envs/apple/tests/: test_asr_vibevoice_vllm_config.py  test_cli_srt.py  test_subsync_tui.py  test_vad.py  test_vocal_separation.py
envs/inference/: README.md  pyproject.toml
envs/inference/src/ja_media_inference/: __init__.py  qwen3_align_smoke.py
envs/inference/src/ja_media_inference/forced_alignment/: __init__.py  qwen3_vllm.py  text_units.py
envs/inference/tests/: test_forced_alignment_text_units.py
envs/services/: Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
envs/services/scripts/: smoke_anime_crosswalk.py  update_anime_crosswalk.sh
envs/services/src/ja_media_services/: __init__.py
envs/services/src/ja_media_services/anilist_search/: anilist_api.py  anilist_flatten.py  app.py  dataset.py  db.py  exact_fallback.py  fallback_cache.py  fallback_query_cache.py  fallback_schema.py  ingest.py  metadata.py  metrics.py  observability.py  observability_routes.py  refresh.py  search_fallback.py  settings.py  singleflight.py  smoke.py
envs/services/src/ja_media_services/anime_audio/: __init__.py  app.py  db.py  index.py  manifest.py  metrics.py  settings.py  smoke.py  watcher.py
envs/services/src/ja_media_services/anime_crosswalk/: __init__.py  app.py  db.py  ingest.py  metrics.py  settings.py  smoke.py
envs/services/src/ja_media_services/kitsunekko_subtitles/: __init__.py  app.py  db.py  episode.py  ingest.py  metrics.py  settings.py  smoke.py
envs/services/systemd/: anime-crosswalk-update.service  anime-crosswalk-update.timer  anime-crosswalk.service
envs/services/tests/: anime_audio_support.py  test_anilist_search_anilist_api.py  test_anilist_search_db.py  test_anilist_search_exact_fallback.py  test_anilist_search_fallback_cache.py  test_anilist_search_refresh.py  test_anilist_search_search_fallback.py  test_anime_audio_api.py  test_anime_audio_index.py  test_anime_audio_watcher.py  test_anime_crosswalk_api.py  test_anime_crosswalk_ingest.py  test_kitsunekko_subtitles_api.py  test_kitsunekko_subtitles_ingest.py
examples/forced-alignment/qwen3-tts/: source.txt
scripts/: oai_batch_rollout.py  reproduce_macos_http_subprocess_segv.py  reproduce_macos_nfs_probe_crash.py
scripts/exploration/: .gitignore  README.md  anilist-search.py  episode_coverage.py  qwen3_payload_audio_chain_check.py  qwen3_vllm_online_example_smoke.py  qwen3_vllm_tts_smoke.py
site/: Caddyfile  Dockerfile  README.md  astro.config.mjs  package-lock.json
site/src/content/docs/: index.mdx
site/src/content/docs/guides/: services.md
site/src/content/docs/guides/Audio/: audio-library.md  get-id.md  subsync.md  transcribe.md  vad.md
site/src/content/docs/services/: anilist-search.md  anime-audio.md
site/src/content/docs/setup/: audiobookshelf.md  config.md  monitoring.md  overview.md  services.md  tools.md
site/src/styles/: custom.css
