[project]
name = "ja-media-toolkit"
version = "0.1.0"
description = "Japanese media organization and transcription tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
  "packages/core",
  "packages/media",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
