[project]
name = "ja-media-services"
version = "0.1.0"
description = "LAN services for ja-media-toolkit"
requires-python = ">=3.13"
dependencies = [
    "aiolimiter>=1.2.1",
    "duckdb>=1.5.0",
    "fastapi>=0.124.0",
    "httpx>=0.28,<1",
    "ja-media-core",
    "kagglehub>=0.4.0",
    "parse-torrent-title>=2.8.2",
    "prometheus-client>=0.23.0",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.38.0",
    "watchdog>=6.0.0",
]

[project.scripts]
anime-crosswalk = "ja_media_services.anime_crosswalk.app:main"
anime-crosswalk-ingest = "ja_media_services.anime_crosswalk.ingest:main"
anime-crosswalk-smoke = "ja_media_services.anime_crosswalk.smoke:main"
anilist-search = "ja_media_services.anilist_search.app:main"
anilist-search-ingest = "ja_media_services.anilist_search.ingest:main"
anilist-search-smoke = "ja_media_services.anilist_search.smoke:main"
anime-audio = "ja_media_services.anime_audio.app:main"
anime-audio-smoke = "ja_media_services.anime_audio.smoke:main"
kitsunekko-subtitles = "ja_media_services.kitsunekko_subtitles.app:main"
kitsunekko-subtitles-ingest = "ja_media_services.kitsunekko_subtitles.ingest:main"
kitsunekko-subtitles-smoke = "ja_media_services.kitsunekko_subtitles.smoke:main"

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
ja-media-core = { path = "../../packages/core", editable = true }
